--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,11 +2,7 @@ on: [push, pull_request]
 name: Main
 jobs:
   php-cs-fixer:
-    name: PHP-CS-Fixer
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: PHP-CS-Fixer
-        uses: docker://oskarstark/php-cs-fixer-ga
-        with:
-          args: --diff --dry-run
+  - name: PHP CS Fixer
+    uses: StephaneBour/actions-php-cs-fixer@1.0
+    with:
+      dir: './'
