--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 MYSQLCONNSTR_localdb=db=test;HOST=mariadb;user=test;password=test
 captchaSecret="6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe"
 captchaSiteKey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"
+AUTOREVIEW='1'
