Update all environment variables so stuff is the same

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-MYSQLCONNSTR_localdb=db=test;HOST=mariadb;user=test;password=test
-captchaSecret="6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe"
-captchaSiteKey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"
+MYSQL_CONNECTION_STRING=db=test;HOST=mariadb;user=test;password=test
+CAPTCHA_SECRET="6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe"
+CAPTCHA_SITE_KEY="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"
+ENVIRONMENT="dev"
+AUTO_REVIEW="1"
