--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-MYSQLCONNSTR_localdb=db=test;HOST=mariadb;user=test;password=test
+MYSQLCONNSTR_localdb=db=test;HOST=127.0.0.1;user=test;password=test
 captchaSecret="6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe"
 captchaSiteKey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"
